Agent query: Are the feature cards displaying correctly with images and is the horizontal scroll working when the viewport is reduced?

--- a/styles/_modules/_features.scss
+++ b/styles/_modules/_features.scss
@@ -1,6 +1,5 @@
 .features {
     padding: $spacing-lg * 2;
-    background-color: #f5f5f5;
 
     &__container {
         @include container;
@@ -25,7 +24,7 @@
     }
 
     &__card {
-        background-color: #E8E8E8;
+        background-color: #D9D9D9;
         border-radius: 20px;
         padding: $spacing-lg * 2;
         min-width: 300px;
